Refactor response classes and update field names for consistency
- Removed unnecessary comments and whitespace in CursorResponse, MessageSystemResponse, NotificationMessageResponse, PageResponse, TokenResponse, and UserResponse classes.
- Changed field names from 'status' to 'type' in NotificationMessageResponse and related classes for clarity.
- Updated date fields to use Instant instead of Date in UserResponse, AbstractEntity, and AuthenticationServiceImpl.
- Simplified logic in FriendConsumer and FriendPayload to use new field names.
- Enhanced WebSocketListener to improve user session handling and added debounce logic for offline users.
- Refactored UserMapper to return empty set instead of null for null entities.
- Improved error handling in StorageServiceImpl by throwing InvalidDataException instead of RuntimeException.
- Updated RateLimitingService to use a constant delimiter for constructing rate limit keys.
- Cleaned up imports and removed unused variables in various service implementations.
- Adjusted test imports in ChatControllerTest to reflect recent changes in request classes.